@@ -15,6 +15,9 @@ import org.simgrid.msg.TransferFailureException;
 import org.simgrid.msg.Process;
 
 public class Slave extends Process {
+	public Slave(Host host, String name, String[]args) {
+		super(host,name,args);
+	}
 	public void main(String[] args) throws TransferFailureException, HostFailureException, TimeoutException {
 		if (args.length < 1) {
 			Msg.info("Slave needs 1 argument (its number)");
