@@ -15,6 +15,9 @@ import org.simgrid.msg.Task;
 import org.simgrid.msg.Process;
 
 public class Master extends Process {
+	public Master(Host host, String name, String[]args) {
+		super(host,name,args);
+	}
 	public void main(String[] args) throws MsgException {
       if (args.length < 4) {
 	 Msg.info("Master needs 4 arguments");
