@@ -430,10 +430,9 @@ Java_org_simgrid_msg_Process_waitFor(JNIEnv * env, jobject jprocess,
     return;
   }
   MSG_error_t rv = MSG_process_sleep((double)jseconds);
-
-  jxbt_check_res("MSG_process_sleep()", rv, MSG_OK,
-                 bprintf("unexpected error , please report this bug"));
-
+  if (rv != MSG_OK) {
+//  	smx_ctx_java_stop(smx_ctx_java_self());
+  }
 }
 
 JNIEXPORT void JNICALL
